--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,12 +1,15 @@
 @import "../css-config/mixins.scss";
 
 .about-container{
-width:100%;
-height: 100vh;
-display: flex;
-flex-direction: column;
-align-items: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    @include md{
+    width:calc(100% - 20px);
 
+}
 .heading{
     margin: 0 auto;
     /* padding: 20px; */
