--- a/src/components/Skills/skills.scss
+++ b/src/components/Skills/skills.scss
@@ -5,10 +5,11 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-bottom: 15rem;
+  // margin-bottom: 15rem;
   @include md {
-    width: calc(100% - 20px);
+  
     height: 100vh;
+    // background-color: #a3c0f4;
   }
   .heading {
     margin: 0 auto;
@@ -17,6 +18,11 @@
     width: 100%;
     padding-top: 1.3rem;
     // height: 150vh;
+    @include md{
+      width: calc(100% - 20px);
+      padding: 0;
+      
+    }
     h1 {
       font-size: 3.3rem;
       font-weight: bolder;
@@ -24,12 +30,30 @@
       font-family: cursive;
       @include md {
         font-size: 4rem;
+        // background-color: #b272f3;
       }
     }
     p {
-      padding: 1rem;
+      padding: 2rem 2rem 0rem 2rem;
+      text-align: justify;
       font-size: 1.2rem;
-      font-weight: bold;
+            letter-spacing: 1px;
+            font-weight: 600;
+            line-height: 1.5;
+            font-family: serif;
+      @include md{
+        // width: calc(100% - 50px);
+        font-size: 1.4rem;
+        font-family: cursive;
+        text-align: center;
+        // padding: 2rem;
+        padding: 0;
+     letter-spacing: normal;
+     line-height: normal;
+     margin: 0 10rem 0 10rem;
+    //  background-color: #114aec;
+
+      }
     }
   }
   .skill-content {
@@ -39,16 +63,38 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    @include md{
+      flex-direction: row;
+      
+    }
     .skill-left {
       width: calc(100% - 20px);
       margin: 0 auto;
 
+@include md{
+  width: 45%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 15px;
+  grid-template-areas: 
+  "one auto two"
+  "auto three auto"
+}
+#box2{
+  @include md{
+
+    transform: translateX(138px);
+  }
+}
       .box {
         // width: 100%;
         border: 2px solid black;
         border-radius: 5px;
         padding: 1rem;
         margin-bottom: 1rem;
+        background-image: linear-gradient(135deg, #efeef5 10%, #b272f3 100%);
+        filter: drop-shadow(-1px 1px 4px rgb(128, 128, 128));
         .title {
           margin: 0 auto;
 
@@ -58,6 +104,7 @@
               sans-serif;
             font-size: 2rem;
             letter-spacing: 2px;
+            color: black;
           }
           .content {
             margin-top: 2rem;
@@ -66,12 +113,17 @@
             justify-content: center;
             overflow: hidden;
             gap: 15px;
+            color: black;
+            font-weight: bold;
+            @include md{
+              gap: 10px;
+            }
             .skill-img {
               span {
                 padding-left: 10px;
                 /* display: block; */
                 position: relative;
-                top: -7px;
+                top: -14px
               }
             }
           }
@@ -81,6 +133,10 @@
     .skill-right {
       width: calc(100% - 20px);
       margin: 0 auto;
+      @include md{
+        width: 45%;
+        margin: auto;
+      }
       .box-2 {
         display: flex;
         flex-wrap: wrap;
@@ -104,48 +160,87 @@
           margin-top: 1rem;
           display: grid;
           grid-template-columns: repeat(2, 1fr);
-
           gap: 10px;
+          @include md{
+            margin-top: 2rem;
+          }
           .circle-1 {
             padding-top: 1rem;
-            background-color: aquamarine;
+            background-image: linear-gradient(135deg, #efeef5 10%, #b272f3 100%);
             width: 150px;
-            height: 170px;
+            height: 190px;
             display: flex;
+            flex-wrap: wrap;
+            overflow: hidden;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            #desc{
-                margin-top: 1rem;
+            justify-content: space-between;
+            // padding: 0.5rem;
+            border-radius: 5px;
+            filter: drop-shadow(-1px 1px 4px rgb(128, 128, 128));
+            @include md{
+              width: 200px;
+              height: 182px;
+             margin: 0 auto;
+            //  padding: 0;
+            }
+            #desc {
+              padding: 1rem;
+              font-size: 1.6rem;
+              font-weight: bold;
+              text-align: center;
             }
             .circle {
               width: 140px;
               height: 140px;
-             background-image: conic-gradient(red 3deg,white 0deg);
+              background-image: conic-gradient(rgb(0, 13, 255) 0deg, white 0deg);
               position: relative;
               border-radius: 50%;
               position: relative;
               display: flex;
               justify-content: center;
               align-items: center;
-              
-              p{
+              animation: animate1 3s ease forwards;
+              p {
                 position: relative;
-
+                font-size: 2rem;
+                font-weight: bolder;
               }
-              &::before{
-                  content: "";
-                  width: 120px;
-                  height: 120px;
-                  border-radius: 50%;
-                  position: absolute;
-                  background-color: red;
-                  
+              &::before {
+                content: "";
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                position: absolute;
+                background-color: rgb(194, 194, 194);
               }
             }
           }
         }
       }
     }
+  }
+}
+
+
+@keyframes animate1 {
+  100%{
+background-image: conic-gradient(rgb(0, 13, 255)324deg, white 0deg);
+  }
+}
+@keyframes animate2 {
+  100%{
+background-image: conic-gradient(rgb(0, 13, 255)252deg, white 0deg);
+  }
+}
+@keyframes animate3 {
+  100%{
+background-image: conic-gradient(rgb(0, 13, 255)270deg, white 0deg);
+  }
+}
+@keyframes animate4 {
+  100%{
+background-image: conic-gradient(rgb(0, 13, 255)288deg, white 0deg);
   }
 }
