--- a/src/components/Experience/experience.scss
+++ b/src/components/Experience/experience.scss
@@ -2,9 +2,12 @@
 
 .exp-container {
   width: 100%;
-  height: 100vh;
+  
   margin-top: 20px;
 //   margin-bottom: 10px;
+@include md{
+  height: 100vh;
+}
   .heading {
     margin: 0 auto;
     /* padding: 20px; */
