--- a/src/components/Experience/experience.scss
+++ b/src/components/Experience/experience.scss
@@ -1,12 +1,28 @@
 @import "../css-config/mixins.scss";
 
+
+#seperator{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 17px;
+  @include md{
+    display: none;
+}
+  img{
+      width: 200px;
+  height: 14px;
+  }
+}
 .exp-container {
   width: 100%;
   
-  margin-top: 20px;
+  // margin-top: 20px;
 //   margin-bottom: 10px;
 @include md{
   height: 100vh;
+  margin-top: 30px;
 }
   .heading {
     margin: 0 auto;
