--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,14 +1,33 @@
 @import "../css-config/mixins.scss";
 
+
+
+#seperator{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 17px;
+    @include md{
+        display: none !important;
+    }
+    img{
+        width: 200px;
+    height: 14px;
+    }
+}
 .about-container{
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 10px;
     @include md{
     width:100%;
 background-color: antiquewhite;
+margin-top: 0px;
+padding-bottom: 20px;
 }
 .heading{
     margin: 0 auto;
@@ -62,7 +81,7 @@ padding-top: 0.9rem;
         width: 67%;
     position: absolute;
     left: 7rem;
-    top: 83rem;
+    top: 87rem;
     height: 32%;
     border-radius: 5px;
     @include md{
