--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -1,11 +1,26 @@
 @import "../css-config/mixins.scss";
 
+
+#seperator{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 17px;
+  @include md{
+    display: none;
+}
+  img{
+      width: 200px;
+  height: 14px;
+  }
+}
 .port-container {
   width: 100%;
-  margin-top: 20px;
+  // margin-top: 20px;
   height: 100%;
   @include md{
-    margin-top: 40px;
+    margin-top: 50px;
   }
   .heading {
     margin: 0 auto;
@@ -95,7 +110,7 @@
         padding-top: 10px;
         @include md{
           width: 262px;
-    height: 310px;
+    height: 297px;
         }
         .img-container {
           width: 150px;
@@ -131,16 +146,12 @@
             }
           }
         }
-        // .category {
-        //   color: #64748b;
-        //   font-size: 12px;
-        //   font-weight: bold;
-        //   width: 100%;
-        //   display: none;
-        //   p {
-        //     padding: 0 18px;
-        //   }
-        // }
+        .category{
+          display: none;
+          @include md{
+            display: none;
+          }
+        }
         .desc {
           color: #64748b;
           width: 100%;
