--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -25,9 +25,10 @@
     margin-top: 10px;
     @include md{
     width:100%;
-background-color: antiquewhite;
-margin-top: 0px;
+// background-color: antiquewhite;
+margin-top: 10rem;
 padding-bottom: 20px;
+height: 100vh;
 }
 .heading{
     margin: 0 auto;
@@ -78,19 +79,36 @@ padding-top: 0.9rem;
     }
     }
     #person-2{
-        width: 67%;
-    position: absolute;
-    left: 7rem;
-    top: 87rem;
-    height: 32%;
-    border-radius: 5px;
-    @include md{
-        width: 35%;
+    //     width: 67%;
+    // position: absolute;
+    // left: 7rem;
+    // top: 87rem;
+    // height: 32%;
+    // border-radius: 5px;
+    // @include md{
+    //     width: 35%;
        
-        left: 10rem;
-        top: 74rem;
-        height: 67%;
-    }
+    //     left: 10rem;
+    //     top: 74rem;
+    //     height: 67%;
+    // }
+
+
+    //  display: flex;
+     width: 80%;
+        // justify-content: center;
+        // align-items: center;
+     margin-left: 4rem; 
+     // z-index: 99;  
+     position: relative; 
+     border-radius: 5px; 
+     height: 95%;
+// margin: 50% auto;
+     @include md{
+         margin-left: 8rem;
+         width: 70%;
+         box-shadow: 18px 18px 65px #510051
+     }
     }
 }
 .img-info{
@@ -179,7 +197,7 @@ padding-top: 0.9rem;
     /* border: 1px solid white; */
     background: #464242;
     margin: 1rem;
-    box-shadow: 0px 7px 9px #2f2a2a;
+    // box-shadow: 0px 7px 9px #2f2a2a;
     box-shadow: 5px 5px 0 #2f2a2a;
     border: none;
     border-radius: 5px;
@@ -200,7 +218,7 @@ padding-top: 0.9rem;
       }
       button:active {
         box-shadow: 0 0 0 #2f2a2a;
-        transform: translateX(4px) translateY(4px);
+        transform: translateX(5px) translateY(5px);
       }
     
 }
