footer container complete

--- a/src/components/Experience/experience.scss
+++ b/src/components/Experience/experience.scss
@@ -22,7 +22,8 @@
 //   margin-bottom: 10px;
 @include md{
   height: 100vh;
-  margin-top: 30px;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
   .heading {
     margin: 0 auto;
