--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -20,7 +20,9 @@
   // margin-top: 20px;
   height: 100%;
   @include md{
-    margin-top: 50px;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+
   }
   .heading {
     margin: 0 auto;
