--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -20,7 +20,8 @@
   width: 100%;
   @include md{
     
-    margin-top: 40px;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
   .heading {
     margin: 0 auto;
