--- a/src/components/Skills/skills.scss
+++ b/src/components/Skills/skills.scss
@@ -22,7 +22,7 @@
   width: 100%;
   @include md {
     margin-top: 30px;
-  
+  margin-bottom: 5rem;
     height: 100vh;
     // background-color: #a3c0f4;
   }
