--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -18,20 +18,17 @@
  
   // flex-flow: column-reverse;
   width: 100%;
-  background: rgb(184, 67, 250);
-  background: linear-gradient(
-      302deg,
-      rgba(241, 239, 246, 1) 0%,
-      rgba(208, 126, 255, 0.837) 91%
-    );
+  // background: rgb(184, 67, 250);
+  // background: linear-gradient(
+  //     302deg,
+  //     rgba(241, 239, 246, 1) 0%,
+  //     rgba(208, 126, 255, 0.837) 91%
+  //   );
+  background: #0f0e17;
     
     @include md{
-    background: rgb(184, 67, 250);
-    background: linear-gradient(
-      302deg,
-      rgba(208, 126, 255, 0.837) 0%,
-      rgba(241, 239, 246, 1) 91%
-      );
+    // background: rgb(184, 67, 250);
+    background: #0f0e17;
       flex-direction: row;
   
   }
@@ -59,7 +56,8 @@
       .hello {
         display: inline-block;
         font-weight: bolder;
-        color: rgb(46, 46, 46);
+        // color: rgb(46, 46, 46);
+        color: white;
         opacity: 0;
         animation: slideBottom 1s ease forwards;
         animation-delay: 0.7s;
@@ -72,7 +70,8 @@
       h1 {
         font-size: 4rem;
         font-weight: bolder;
-        color: rgb(46, 46, 46);
+        // color: rgb(46, 46, 46);
+        color: white;
         margin-top: 1rem;
         opacity: 0;
         animation: slideRight 1s ease forwards;
@@ -82,6 +81,7 @@
         }
         span {
           color: #9000ff;
+          // color: #7f5af0;
           font-size: 4rem;
           font-weight: bolder;
           @include md{
@@ -94,7 +94,9 @@
       font-size: 2.5rem;
       font-weight: bold;
       // margin-left: 40px;
-      color: rgb(46, 46, 46);
+      // color: rgb(46, 46, 46);
+      color: white;
+
       margin-top: 1rem;
       @include md{
         font-size: 4rem;
@@ -118,7 +120,8 @@
         //  padding-right: 50px;
         text-align: left;
         overflow: hidden;
-        color: rgb(46, 46, 46);
+        // color: rgb(46, 46, 46);
+        color: white;
         opacity: 0;
         animation: slideLeft 1s ease forwards;
         animation-delay: 0.7s;
@@ -138,24 +141,26 @@ font-weight: normal;
       animation: slideTop 2s ease forwards;
       animation-delay: 0.7s;
       margin-top: 1rem;
-      margin-left:42px;
+      margin-left:66px;
       @include md{
         margin-top: 3rem;
        margin-left:auto;
        width: 100%;
       }
       button {
-        width: 15rem;
-        height: 4rem;
+        width: 12rem;
+        height: 3rem;
         /* background-image: linear-gradient(135deg, #FF6FD8 10%, #3813C2 100%); */
         color: white;
         font-size: 1.5rem;
         font-weight: 600;
-        /* border: 1px solid white; */
-        background: #464242;
+      
+        // background: #464242;
+        background-color: #9000ffd4;
+        box-shadow: 5px 5px 0 rgb(88 0 109 / 96%);
         margin: 1rem;
-        /* box-shadow: 0px 7px 9px #2f2a2a; */
-        box-shadow: 5px 5px 0 #2f2a2a;
+        
+        // box-shadow: 5px 5px 0 #2f2a2a;
         border: none;
         border-radius: 5px;
         transition: transform 0.2s, box-shadow 0.2s;
@@ -263,8 +268,9 @@ position: absolute;
       svg {
         width: 100%;
         height: 20px;
-        filter: drop-shadow(-1px 1px 4px rgb(233, 233, 233));
+        // filter: drop-shadow(-1px 1px 4px rgb(233, 233, 233));
         cursor: pointer;
+        color: #9000ff;
       }
     }
   }
