--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -2,6 +2,7 @@
 
 
 
+
 #seperator{
     display: flex;
     justify-content: center;
@@ -9,14 +10,20 @@
     width: 100%;
     margin-top: 17px;
     @include md{
-        display: none !important;
+        
+        display: none ;
+        
     }
     img{
         width: 200px;
-    height: 14px;
+        height: 14px;
+        @include md{
+            display: none;
+        }
     }
 }
 .about-container{
+    background: #242629;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -42,6 +49,8 @@ height: 100vh;
         font-weight: bolder;
         letter-spacing: 1px;
         font-family: cursive;
+        color: #fffffe;
+        filter: drop-shadow(-1px 1px 4px rgb(154, 154, 154));
         @include md{
     font-size: 4rem;
         }
@@ -53,6 +62,7 @@ width: 100%;
 display: flex;
 flex-direction: column;
 padding-top: 0.9rem;
+// background-color: #fffffe;
 @include md{
     flex-direction: row;
     padding-top: 3.9rem;
@@ -62,6 +72,8 @@ padding-top: 0.9rem;
     // background-color: antiquewhite;
     // position: relative;
     height: 262px;
+    
+//   background: #0f0e17;
     @include md{
         height: 430px;
     }
@@ -107,17 +119,23 @@ padding-top: 0.9rem;
      @include md{
          margin-left: 8rem;
          width: 70%;
-         box-shadow: 18px 18px 65px #510051
+         box-shadow: 18px 10px 33px #b2adad;
      }
     }
 }
 .img-info{
     width: 100%;
+  @include md{
+    margin-right: 3rem;
+  }
+
     .heading{
         h3{
             font-size: 1.2rem;
     font-weight: 600;
     font-family: cursive;
+    // color: #fffffe;
+    color: #7f5af0;
     @include md{
         font-size: 2rem;
     }
@@ -137,6 +155,7 @@ padding-top: 0.9rem;
             font-weight: 600;
             line-height: 1.5;
             font-family: serif;
+            color: #9e9fa1;
             @include md{
                 font-size: 1.7rem;
                 font-weight: normal;
@@ -153,6 +172,7 @@ padding-top: 0.9rem;
     display: flex;
     // flex-direction: column;
     justify-content: space-between;
+    color: #9e9fa1;
     @include md{
         padding-top: 1rem;
      
@@ -171,7 +191,9 @@ padding-top: 0.9rem;
             }
             svg{
                 margin-right: 10px;
+                color: white;
                 @include md{
+             
                    font-size: 2rem; 
                 }
             }
@@ -195,10 +217,12 @@ padding-top: 0.9rem;
     font-size: 1.5rem;
     font-weight: 600;
     /* border: 1px solid white; */
-    background: #464242;
+    // background: #464242;
     margin: 1rem;
     // box-shadow: 0px 7px 9px #2f2a2a;
-    box-shadow: 5px 5px 0 #2f2a2a;
+    // box-shadow: 5px 5px 0 #2f2a2a;
+    background-color: #9000ffd4;
+        box-shadow: 5px 5px 0 rgb(88 0 109 / 96%);
     border: none;
     border-radius: 5px;
     transition: transform 0.2s, box-shadow 0.2s;
