--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer-container {
   margin-top: 5rem;
-  background-color: black;
+  background-color: #111115;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,8 +19,13 @@
       color: white;
       font-size: 1.2rem;
       letter-spacing: 1px;
-      font-family: "Barriecito", cursive;
+      // font-family: "Anton", sans-serif;
+        font-family: "Lobster", cursive;
+      text-transform: uppercase;
     //   font-weight: bolder;
+    
+    letter-spacing: 3px;
+    word-spacing: 7px;
     @include md{
         font-size: 1.5rem;
     }
@@ -49,10 +54,10 @@
           position: relative;
           display: inline-block;
           // color: white;
-          color: rgb(227, 227, 227);
+          color: #9e9fa1;
           text-decoration: none;
           &:hover{
-            color: rgb(240, 3, 240);
+            color: #9000ff;
         }
         //   animation: slideTop 0.5s ease forwards;
         //   animation-delay: calc(0.2s * var(--i));
@@ -89,13 +94,13 @@
     //   animation: slideLeft 0.5s ease forwards;
     //   animation-delay: calc(0.2s * var(--i));
       svg {
-        color: #ffffff;
+        color: #9000ff;
         width: 100%;
         height: 2rem;
         // filter: drop-shadow(-1px 1px 4px rgb(233, 233, 233));
         cursor: pointer;
         &:hover{
-            color: rgb(240, 3, 240);
+            color: #9b18fe;
         }
       }
     }
@@ -103,7 +108,7 @@
   .footer-content {
     padding: 1rem;
     p{
-        color: white;
+      color: #9e9fa1;
         padding-bottom: 0.5rem;
         @include md{
             font-size: 1.3rem;
