--- a/src/components/Skills/skills.scss
+++ b/src/components/Skills/skills.scss
@@ -20,8 +20,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-top: 30px;
   @include md {
-    margin-top: 30px;
+
   margin-bottom: 5rem;
     height: 100vh;
     // background-color: #a3c0f4;
@@ -126,7 +127,7 @@
             font-size: 2rem;
             letter-spacing: 2px;
             // color: black;
-            color: white;
+            color: #7f5af0;
           }
           .content {
             margin-top: 2rem;
@@ -181,8 +182,10 @@
               sans-serif;
             font-size: 2rem;
             letter-spacing: 2px;
-            color: white;
+            color: #7f5af0;
+            margin-bottom: 1rem;
           }
+
         }
         .circle-content {
           margin-top: 1rem;
@@ -198,7 +201,7 @@
             background-color: #16161a;
             // background: #242629;
             width: 150px;
-            height: 190px;
+            height: 182px;
             display: flex;
             flex-wrap: wrap;
             overflow: hidden;
@@ -211,7 +214,7 @@
             // filter: drop-shadow(-1px 1px 4px rgb(128, 128, 128));
             @include md{
               width: 200px;
-              height: 182px;
+              // height: 182px;
              margin: 0 auto;
             //  padding: 0;
             }
